2004-01-03 Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-util.c (gda_file_save): added O_TRUNC flag.

2003-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-command.c (gda_command_copy): dont use C99.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_data_source_list): fixed
	documentation typo.

2003-12-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-error.[ch] (gda_error_get_number): removed 'const' from
	function's return type.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128933

	* libgda/gda-log.[ch] (gda_log_clean_*): removed unimplemented
	functions.

2003-12-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #128929

	* libgda/gda-client.h: added missing space in function prototype
	that confuses pygtk's h2def.py.

2003-11-30  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-data-model.c:
	(gda_data_model_foreach): backported from HEAD.

2003-11-30  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-parameter.c (gda_parameter_list_clear):
	Parameters were not removed from the hash table (just freed).

2003-11-30  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0,2

2003-11-28  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-data-model.c: emit the row_updated, row_inserted,
	row_removed and changed signals when appropiate.

2003-11-28  Laurent Sansonetti <lrz@gnome.org>

	* libgda/gda-connection.c (gda_connection_begin_transaction):
	Fixes a typo in the comment.

2003-11-26  Filip Van Raemdonck <mechanix@debian.org>

	* providers/mdb/gda-mdb-provider.c (gda_mdb_provider_execute_sql):
	guard against passing NULL pointers to mdb-tools.

2003-11-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libgda/Makefile.am:
	* providers/firebird/Makefile.am:
	* providers/freetds/Makefile.am:
	* providers/ibmdb2/Makefile.am:
	* providers/ldap/Makefile.am:
	* providers/mdb/Makefile.am:
	* providers/msql/Makefile.am:
	* providers/mysql/Makefile.am: